--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,15 +11,14 @@ keywords = ["vk_api", "vk", "cli"]
 [tool.poetry.dependencies]
 python = "^3.9"
 requests = "^2.28.1"
-click = "^8.1.3"
-Pygments = "^2.12.0"
+typer = {extras = ["all"], version = "^0.7.0"}
 
 [tool.poetry.dev-dependencies]
 pylint = "^2.14.5"
 autopep8 = "^1.6.0"
 
 [tool.poetry.scripts]
-vk = "vk_cli.main:command"
+vk = "vk_cli.main:app"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
